--- a/aboutus.html
+++ b/aboutus.html
@@ -18,19 +18,27 @@
 
     <header>
         <nav>
-            <div class="logo">
-                <a href="index.html"><img src="src/club-logo.png"></a>
-                <a href="index.html"> ikshiGen AI</a>
-            </div>
-            <ul class="nav-links">
-                <li><a href="aboutus.html" class="nav-link active">About Us</a></li>
-                <li><a href="ourteam.html" class="nav-link">Our Team</a></li>
-                <li><a href="#" class="nav-link">Blogs</a></li>
-                <li><a href="whatwedo.html" class="nav-link">What We Do</a></li>
-                <li><a href="#join-now" class="nav-link">Join Us</a></li>
-            </ul>
+          <div class="logo">
+            <a href="index.html"><img src="src/club-logo.png" alt="logo" /></a>
+            <a href="index.html">ikshiGen AI</a>
+          </div>
+          <ul class="nav-links">
+            <li><a href="aboutus.html" class="nav-link">About Us</a></li>
+            <li><a href="ourteam.html" class="nav-link">Our Team</a></li>
+            <li><a href="#" class="nav-link">Blogs</a></li>
+            <li><a href="whatwedo.html" class="nav-link">What We Do</a></li>
+            <li><a href="#join-now" class="nav-link">Join Us</a></li>
+          </ul>
+          <a class="menu-icon" onclick="toggleMenu()">::</a>
         </nav>
-    </header>
+        <div class="dropdown-menu" id="dropdown-menu">
+          <a href="aboutus.html">About Us</a>
+          <a href="ourteam.html">Our Team</a>
+          <a href="#">Blogs</a>
+          <a href="whatwedo.html">What We Do</a>
+          <a href="#join-now">Join Us</a>
+        </div>
+      </header>
     <!-- welcome message -->
      <!-- EASTER EGG:- Pop 20 bubble in home page to open a mini game -->
     <div class="welcome-banner" >
