--- a/aboutus.html
+++ b/aboutus.html
@@ -139,6 +139,7 @@
       </footer>
     <script src="app.js"></script>
     <script src="aboutus.js"></script>
+    <script src="menu.js"></script>
 </body>
 
 </html>
