--- a/whatwedo.html
+++ b/whatwedo.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Webpage</title>
+    <title>What We Do</title>
     <link rel="stylesheet" href="css/whatwedo.css">
     <link rel="stylesheet" href="css/header-footer-common.css">
     <script src="whatwedo.js" defer></script>
@@ -35,6 +35,7 @@
           <a class="menu-icon" onclick="toggleMenu()">::</a>
         </nav>
         <div class="dropdown-menu" id="dropdown-menu">
+          <a href="index.html">Home</a>
           <a href="aboutus.html">About Us</a>
           <a href="ourteam.html">Our Team</a>
           <a href="#">Blogs</a>
@@ -145,24 +146,9 @@
     <!-- All Projects Section -->
     <!-- All Projects Section -->
 
-    <hr> <!-- Separator Line -->
 
     <!-- Why Join Us Section -->
-    <section id="why-join-us">
-        <h1>Why Join Us</h1>
-        <div class="why-join-container">
-            <div class="why-join-image">
-            </div>
-            <div class="why-join-benefits">
-                <ul>
-                    <li>Solve real world industry problems using AI</li>
-                    <li>Mentoring by industry members. </li>
-                    <li>Exploration of various AI tools to make life easier.</li>
-                    <!-- Add more benefits as needed -->
-                </ul>
-            </div>
-        </div>
-    </section>
+
     <!-- Footer Section -->
     <footer id="join-now">
         <div class="footer-section-innovation">
