--- a/aboutus.html
+++ b/aboutus.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ikshiGen</title>
+    <title>About Us</title>
     <link rel="stylesheet" href="css/header-footer-common.css">
     <link rel="stylesheet" href="css/aboutus.css">
     <link rel="icon" href="src/club-logo.png" type="image/png">
@@ -32,6 +32,7 @@
           <a class="menu-icon" onclick="toggleMenu()">::</a>
         </nav>
         <div class="dropdown-menu" id="dropdown-menu">
+          <a href="index.html">Home</a>
           <a href="aboutus.html">About Us</a>
           <a href="ourteam.html">Our Team</a>
           <a href="#">Blogs</a>
