--- a/whatwedo.html
+++ b/whatwedo.html
@@ -29,7 +29,7 @@
             <li><a href="aboutus.html" class="nav-link">About Us</a></li>
             <li><a href="ourteam.html" class="nav-link">Our Team</a></li>
             <li><a href="#" class="nav-link">Blogs</a></li>
-            <li><a href="whatwedo.html" class="nav-link">What We Do</a></li>
+            <li><a href="whatwedo.html" class="nav-link active">What We Do</a></li>
             <li><a href="#join-now" class="nav-link">Join Us</a></li>
           </ul>
           <a class="menu-icon" onclick="toggleMenu()"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 -10 34 34">
