--- a/ourteam.html
+++ b/ourteam.html
@@ -23,7 +23,7 @@
             </div>
             <ul class="nav-links">
                 <li><a href="aboutus.html" class="nav-link">About Us</a></li>
-                <li><a href="ourteam.html" class="nav-link">Our Team</a></li>
+                <li><a href="ourteam.html" class="nav-link active">Our Team</a></li>
                 <li><a href="#" class="nav-link">Blogs</a></li>
                 <li><a href="whatwedo.html" class="nav-link">What We Do</a></li>
                 <li><a href="#join-now" class="nav-link">Join Us</a></li>
