--- a/ourteam.html
+++ b/ourteam.html
@@ -63,7 +63,7 @@
     </div>
     <!-- Title: Faculty Guide and Team -->
     <div class="faculty-guide-team">
-        <h2>Faculty Guide and Team</h2>
+        <h2>Guide & Team</h2>
         <div class="faculty-guide-content">
             <div class="guide-profile">
                 <img src="src/sunita-bharve.jpg" alt="Faculty Guide">
