--- a/ourteam.html
+++ b/ourteam.html
@@ -176,7 +176,7 @@
                                 <img
                                     src="src/instagram-solid_.png">
                             </a>
-                            <a href="mailto:"  >
+                            <a href="mailto:sumitshende02468@gmail.com">
                                 <img src="src/email_.png" alt="Email Icon">
                             </a>                            
                         </div>
