--- a/aboutus.html
+++ b/aboutus.html
@@ -101,29 +101,29 @@
     <div class="project-card-container">
       <div class="card-col">
         <div class="card">
-          <a href="#">
-            <img src="src/portfolio-01.jpg" alt="Project 1">
+          <a href="https://github.com/ikshigenaimitaoe/Our-Projects/tree/main/Asteroid-final">
+            <img src="src/asteroid.gif" alt="Project 1">
             <div class="title-description">
-              <h4>Project Name 1</h4>
-              <p>Short description for project 1.</p>
+              <h4>Asteroid Detection</h4>
+              <p>Detection of Asteroids using OpenCV.</p>
             </div>
           </a>
         </div>
         <div class="card">
-          <a href="#">
-            <img src="src/portfolio-02.jpg" alt="Project 2">
+          <a href="https://github.com/ikshigenaimitaoe/Our-Projects/tree/main/Flight-price-prediction%20using%20AWS%20SageMaker">
+            <img src="src/flight-preddiction.gif" alt="Project 2">
             <div class="title-description">
-              <h4>Project Name 2</h4>
-              <p>Short description for project 2.</p>
+              <h4>Flight Price Prediction</h4>
+              <p>This model can accurately predict flight prices</p>
             </div>
           </a>
         </div>
         <div class="card">
-          <a href="#">
-            <img src="src/portfolio-03.jpg" alt="Project 3">
+          <a href="https://github.com/ikshigenaimitaoe/Our-Projects/blob/main/intro_gemini_python-v1.0.0.ipynb">
+            <img src="src/vertex-ai.gif" alt="Project 3">
             <div class="title-description">
-              <h4>Project Name 3</h4>
-              <p>Short description for project 3.</p>
+              <h4>Vertex AI</h4>
+              <p>Prompt and image anlysis with Vertex AI</p>
             </div>
           </a>
         </div>
@@ -131,7 +131,7 @@
           <a href="#">
             <img src="src/portfolio-04.jpg" alt="Project 1">
             <div class="title-description">
-              <h4>Project Name 1</h4>
+              <h4>NA</h4>
               <p>Short description for project 1.</p>
             </div>
           </a>
@@ -140,7 +140,7 @@
           <a href="#">
             <img src="src/portfolio-05.jpg" alt="Project 1">
             <div class="title-description">
-              <h4>Project Name 1</h4>
+              <h4>NA</h4>
               <p>Short description for project 1.</p>
             </div>
           </a>
@@ -149,7 +149,7 @@
           <a href="#">
             <img src="src/portfolio-06.jpg" alt="Project 1">
             <div class="title-description">
-              <h4>Project Name 1</h4>
+              <h4>NA</h4>
               <p>Short description for project 1.</p>
             </div>
           </a>
@@ -158,25 +158,7 @@
           <a href="#">
             <img src="src/portfolio-01.jpg" alt="Project 1">
             <div class="title-description">
-              <h4>Project Name 1</h4>
-              <p>Short description for project 1.</p>
-            </div>
-          </a>
-        </div>
-        <div class="card">
-          <a href="#">
-            <img src="src/portfolio-02.jpg" alt="Project 1">
-            <div class="title-description">
-              <h4>Project Name 1</h4>
-              <p>Short description for project 1.</p>
-            </div>
-          </a>
-        </div>
-        <div class="card">
-          <a href="#">
-            <img src="src/portfolio-03.jpg" alt="Project 1">
-            <div class="title-description">
-              <h4>Project Name 1</h4>
+              <h4>NA</h4>
               <p>Short description for project 1.</p>
             </div>
           </a>
