--- a/ourteam.html
+++ b/ourteam.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class='pre-loader'>
-        <img class='loading-gif' alt='loading' src="https://media0.giphy.com/media/11FuEnXyGsXFba/source.gif" />
+        <img class='loading-gif' alt='loading' src="src/loading-screen.gif" />
     </div>
     <header>
         <nav>
@@ -24,7 +24,7 @@
             <ul class="nav-links">
                 <li><a href="aboutus.html" class="nav-link">About Us</a></li>
                 <li><a href="ourteam.html" class="nav-link active">Our Team</a></li>
-                <li><a href="#" class="nav-link">Blogs</a></li>
+                <li><a href="blog/dist/index.html" class="nav-link">Blogs</a></li>
                 <li><a href="whatwedo.html" class="nav-link">What We Do</a></li>
                 <li><a href="#join-now" class="nav-link">Join Us</a></li>
             </ul>
@@ -39,7 +39,7 @@
             <a href="index.html">Home</a>
             <a href="aboutus.html">About Us</a>
             <a href="ourteam.html">Our Team</a>
-            <a href="#">Blogs</a>
+            <a href="blog/dist/index.html">Blogs</a>
             <a href="whatwedo.html">What We Do</a>
             <a href="#join-now">Join Us</a>
         </div>
@@ -158,7 +158,7 @@
                     <div class="team-card">
                         <div class="img-wrapper">
                             <img class="team-img"
-                                src="src/Kishore.jpg" alt="sumit pic">
+                                src="src/sumit.jpg" alt="sumit pic">
                         </div>
                         <p class="text-blk name">
                             Sumit Shende
