--- a/whatwedo.html
+++ b/whatwedo.html
@@ -15,7 +15,7 @@
 <body>
 
     <div class='pre-loader'>
-        <img class='loading-gif' alt='loading' src="https://media0.giphy.com/media/11FuEnXyGsXFba/source.gif" />
+        <img class='loading-gif' alt='loading' src="src/loading-screen.gif" />
     </div>
 
     <!-- Navbar with Inline Style -->
@@ -28,7 +28,7 @@
           <ul class="nav-links">
             <li><a href="aboutus.html" class="nav-link">About Us</a></li>
             <li><a href="ourteam.html" class="nav-link">Our Team</a></li>
-            <li><a href="#" class="nav-link">Blogs</a></li>
+            <li><a href="blog/dist/index.html" class="nav-link">Blogs</a></li>
             <li><a href="whatwedo.html" class="nav-link active">What We Do</a></li>
             <li><a href="#join-now" class="nav-link">Join Us</a></li>
           </ul>
@@ -43,7 +43,7 @@
           <a href="index.html">Home</a>
           <a href="aboutus.html">About Us</a>
           <a href="ourteam.html">Our Team</a>
-          <a href="#">Blogs</a>
+          <a href="blog/dist/index.html">Blogs</a>
           <a href="whatwedo.html">What We Do</a>
           <a href="#join-now">Join Us</a>
         </div>
@@ -120,7 +120,7 @@
     <section id="activity-page">
         <h1>Activity Page</h1>
         <div class="web-chart">
-            <div class="task central-task">Activities</div>
+            <div class="task">Activities</div>
             <div class="task task1" onclick="scrollToContent('task1')">Activity 1</div>
             <div class="task task2" onclick="scrollToContent('task2')">Activity 2</div>
             <div class="task task3" onclick="scrollToContent('task3')">Activity 3</div>
