--- a/aboutus.html
+++ b/aboutus.html
@@ -13,7 +13,7 @@
 <body>
 
   <div class='pre-loader'>
-    <img class='loading-gif' alt='loading' src="https://media0.giphy.com/media/11FuEnXyGsXFba/source.gif" />
+    <img class='loading-gif' alt='loading' src="src/loading-screen.gif" />
   </div>
 
   <header>
@@ -25,7 +25,7 @@
       <ul class="nav-links">
         <li><a href="aboutus.html" class="nav-link active">About Us</a></li>
         <li><a href="ourteam.html" class="nav-link">Our Team</a></li>
-        <li><a href="#" class="nav-link">Blogs</a></li>
+        <li><a href="blog/dist/index.html" class="nav-link">Blogs</a></li>
         <li><a href="whatwedo.html" class="nav-link">What We Do</a></li>
         <li><a href="#join-now" class="nav-link">Join Us</a></li>
       </ul>
@@ -43,7 +43,7 @@
       <a href="index.html">Home</a>
       <a href="aboutus.html">About Us</a>
       <a href="ourteam.html">Our Team</a>
-      <a href="#">Blogs</a>
+      <a href="blog/dist/index.html">Blogs</a>
       <a href="whatwedo.html">What We Do</a>
       <a href="#join-now">Join Us</a>
     </div>
@@ -94,10 +94,6 @@
     <h3>Our Portfolio</h3>
     <h2>Discover Our Recent <span class="highlight1">Projects</span><br> And <span class="highlight2">Showcases</span>
     </h2>
-    <div class="scroll-button">
-      <button id="prev">&lt;</button>
-      <button id="next">&gt;</button>
-    </div>
     <div class="project-card-container">
       <div class="card-col">
         <div class="card">
@@ -164,6 +160,10 @@
           </a>
         </div>
       </div>
+    </div>
+    <div class="scroll-button">
+      <button id="prev">&lt;</button>
+      <button id="next">&gt;</button>
     </div>
   </div>
 
