--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <div class="pre-loader">
-    <img class="loading-gif" alt="loading" src="https://media0.giphy.com/media/11FuEnXyGsXFba/source.gif" />
+    <img class="loading-gif" alt="loading" src="src/loading-screen.gif" />
   </div>
   <header>
     <nav>
@@ -23,7 +23,7 @@
       <ul class="nav-links">
         <li><a href="aboutus.html" class="nav-link">About Us</a></li>
         <li><a href="ourteam.html" class="nav-link">Our Team</a></li>
-        <li><a href="#" class="nav-link">Blogs</a></li>
+        <li><a href="blog/dist/index.html" class="nav-link">Blogs</a></li>
         <li><a href="whatwedo.html" class="nav-link">What We Do</a></li>
         <li><a href="#join-now" class="nav-link">Join Us</a></li>
       </ul>
@@ -40,7 +40,7 @@
     <div class="dropdown-menu" id="dropdown-menu">
       <a href="aboutus.html">About Us</a>
       <a href="ourteam.html">Our Team</a>
-      <a href="#">Blogs</a>
+      <a href="blog/dist/index.html">Blogs</a>
       <a href="whatwedo.html">What We Do</a>
       <a href="#join-now">Join Us</a>
     </div>
