--- a/ourteam.html
+++ b/ourteam.html
@@ -24,7 +24,7 @@
             <ul class="nav-links">
                 <li><a href="aboutus.html" class="nav-link">About Us</a></li>
                 <li><a href="ourteam.html" class="nav-link active">Our Team</a></li>
-                <li><a href="blog/dist/index.html" class="nav-link">Blogs</a></li>
+                <li><a href="blog.html" class="nav-link">Blogs</a></li>
                 <li><a href="whatwedo.html" class="nav-link">What We Do</a></li>
                 <li><a href="#join-now" class="nav-link">Join Us</a></li>
             </ul>
@@ -39,7 +39,7 @@
             <a href="index.html">Home</a>
             <a href="aboutus.html">About Us</a>
             <a href="ourteam.html">Our Team</a>
-            <a href="blog/dist/index.html">Blogs</a>
+            <a href="blog.html">Blogs</a>
             <a href="whatwedo.html">What We Do</a>
             <a href="#join-now">Join Us</a>
         </div>
