--- a/blog.html
+++ b/blog.html
@@ -82,14 +82,14 @@
   <section class="recent-posts">
     <h2>Recent Posts</h2>
     <article>
-      <img src="recent1.jpg" alt="Recent Post 1">
+      <img src="src/portfolio-01.jpg" alt="Recent Post 1">
       <h3>The strongest and sweetest songs yet remain to be sung</h3>
       <p>Awa Melvine | Jan 18, 2019</p>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
       <a href="#" class="read-more">Read More</a>
     </article>
     <article>
-      <img src="recent2.jpg" alt="Recent Post 2">
+      <img src="src/portfolio-02.jpg" alt="Recent Post 2">
       <h3>That love is all there is, is all we know of love</h3>
       <p>Awa Melvine | Jan 18, 2019</p>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
