--- a/aboutus.html
+++ b/aboutus.html
@@ -43,7 +43,7 @@
       <a href="index.html">Home</a>
       <a href="aboutus.html">About Us</a>
       <a href="ourteam.html">Our Team</a>
-      <a href="blog/dist/index.html">Blogs</a>
+      <a href="blog.html">Blogs</a>
       <a href="whatwedo.html">What We Do</a>
       <a href="#join-now">Join Us</a>
     </div>
