--- a/blog.html
+++ b/blog.html
@@ -38,13 +38,19 @@
         </svg></a>
     </nav>
     <div class="dropdown-menu" id="dropdown-menu">
+      <a href="index.html">Home</a>
       <a href="aboutus.html">About Us</a>
       <a href="ourteam.html">Our Team</a>
-      <a href="blog/dist/index.html">Blogs</a>
+      <a href="blog.html">Blogs</a>
       <a href="whatwedo.html">What We Do</a>
       <a href="#join-now">Join Us</a>
     </div>
   </header>
+  <!-- post button -->
+
+<div class="container-btn">
+ <a href="add.html"> <button id="addNewPost" class="btn">Add Blog</button></a>
+</div>
 
   <!-- Trending Posts Section -->
   <!-- <section class="trending-posts">
@@ -132,6 +138,7 @@
   </footer>
   <script src="app.js"></script>
   <script src="blog.js"></script>
+  <script src="menu.js"></script>
 </body>
 
 </html>
