--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="dropdown-menu" id="dropdown-menu">
       <a href="aboutus.html">About Us</a>
       <a href="ourteam.html">Our Team</a>
-      <a href="blog/dist/index.html">Blogs</a>
+      <a href="blog.html">Blogs</a>
       <a href="whatwedo.html">What We Do</a>
       <a href="#join-now">Join Us</a>
     </div>
@@ -51,18 +51,18 @@
     <div class="mySlides">
       <img src="src/Designer2.png" alt="Image 1" />
       <div class="text">
-        <h2 class="slide-title">Designer Title</h2>
-        <p class="slide-description">
-          This is the description for Designer 1.
-        </p>
+        <h2 class="slide-title">Club Inauguration</h2>
+        <p class="slide-description">Join us for the inauguration of our club.</p>
       </div>
     </div>
 
     <div class="mySlides">
       <img src="src/blog.png" alt="Image 2" />
       <div class="text">
-        <h2 class="slide-title">Blog Title</h2>
-        <p class="slide-description">This is the description for Blog 2.</p>
+        <a href="blog.html">
+          <h2 class="slide-title">Recent Blogs</h2>
+        </a>
+          <p class="slide-description">Read the latest blogs posted by our team.</p>
       </div>
     </div>
 
@@ -70,11 +70,9 @@
       <img src="src/aiprojects.png" alt="Image 3" />
       <div class="text">
         <a href="aboutus.html">
-          <h2 class="slide-title">AI Projects Title</h2>
-          <p class="slide-description">
-            This is the description for AI Projects 3.
-          </p>
+          <h2 class="slide-title">Our Projects</h2>
         </a>
+          <p class="slide-description">Click here and discover our Team Member's projects.</p>
       </div>
     </div>
 
