--- a/blog.html
+++ b/blog.html
@@ -49,7 +49,7 @@
   <!-- post button -->
 
 <div class="container-btn">
- <a href="add.html"> <button id="addNewPost" class="btn">Add Blog</button></a>
+ <a href="add.html"> <button id="addNewPost" class="btn">Post Blog</button></a>
 </div>
 
   <!-- Trending Posts Section -->
